Terraform/examples/autoscaling-web-app/wednesday/sg.tf
resource "aws_security_group" "project21_webtier_sg" {
  name        = "project21_webtier_sg"
  description = "Allows public access to website"
  vpc_id      = aws_vpc.project_21_vpc.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "project21_webtier_sg"
  }
}
